unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/Booth_Upload_API_Invalid__c.object-meta.xml
<CustomObject>
    <label>Booth Upload API (Invalid)</label>
    <nameField>
        <displayFormat>BUA-{000000}</displayFormat>
        <label>Booth Upload API (Invalid) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Upload API (Invalid items)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>