unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <label>Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>