unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/Booth_Length__c.field-meta.xml
<CustomField>
    <fullName>Booth_Length__c</fullName>
    <label>Booth Length</label>
    <length>10</length>
    <type>Text</type>
</CustomField>