unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/Booth_Upload_API__c.field-meta.xml
<CustomField>
    <fullName>Booth_Upload_API__c</fullName>
    <label>Booth Upload API</label>
    <referenceTo>Booth_API_Upload__c</referenceTo>
    <relationshipLabel>Booth Upload API (Invalid items)</relationshipLabel>
    <relationshipName>Booth_Upload_API_Invalid_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>