unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <length>250</length>
    <type>Text</type>
</CustomField>