unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/No_Open_Sides__c.field-meta.xml
<CustomField>
    <fullName>No_Open_Sides__c</fullName>
    <label>Open Sides</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>