unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/Operational__c.field-meta.xml
<CustomField>
    <fullName>Operational__c</fullName>
    <label>Operations Zone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>