unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/Stand_Type__c.field-meta.xml
<CustomField>
    <fullName>Stand_Type__c</fullName>
    <label>Stand Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>