unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/State_County__c.field-meta.xml
<CustomField>
    <fullName>State_County__c</fullName>
    <label>State County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>