unpackaged/main/default/objects/Booth_Upload_API_Invalid__c/fields/WWW__c.field-meta.xml
<CustomField>
    <fullName>WWW__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>